--- a/fe/src/styles/ProfessorDetailsPageStyle.css
+++ b/fe/src/styles/ProfessorDetailsPageStyle.css
@@ -29,3 +29,10 @@
     font-size: 2rem;
     font-weight: bold;
 }
+
+@media (max-width: 600px) {
+    .professor-controls {
+        flex-direction: column;
+        gap: 10px;
+    }
+}
